# fastapi-aiogram-template

./: .env.example  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.ssl.yaml
backend/: .flake8  Dockerfile  Makefile  pyproject.toml
backend/src/: main.py
backend/src/config/: __init__.py  settings.py
backend/src/domain/message/: __init__.py  models.py
backend/src/infrastructure/application/: __init__.py  factory.py
backend/src/presentation/api/v1/: __init__.py  messages.py
bot/: Dockerfile  pyproject.toml
bot/src/: main.py
bot/src/config/: __init__.py  settings.py
bot/src/domain/message/: models.py
bot/src/infrastructure/application/: __init__.py  factory.py  storage.py
bot/src/infrastructure/external_api/: __init__.py  messages_api.py
bot/src/infrastructure/redis/: __init__.py  client.py
bot/src/presentation/base/: __init__.py  message_api.py  start.py
nginx/: Dockerfile  nginx.conf
nginx/dev/: nginx.conf
nginx/prod/: nginx.conf
nginx/ssl/: nginx.conf
utils/: create_dummy_certs.sh
