[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["maksimzhohov <zhohovmaksim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.8.0"
requests = "^2.32.3"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
redis = "^5.0.7"
flake8 = "^7.1.0"
isort = "^5.13.2"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
